Added KeycloakJwtAuthenticationConverter tests